static/css/style.css
/* ... */
.search-button:hover {
    background-color: #4f807e;
}


/* Full recipe page */
div strong {
    font-weight: 600;
}

.full-recipe-descriptions,
.full-recipe-method {
    border-top: 1px solid #999;
    border-bottom: 1px solid #999;
    line-height: 1.625rem;
}

.full-recipe-descriptions {
    padding: 5px;
    line-height: 2rem;
}

.full-recipe-descriptions div {
    padding: 5px 10px;
}

.strong-method {
    line-height: 2.5rem;
}

.full-recipe-method p {
    margin-block-start: 0em;
    margin-block-end: 1em;
}

.button-edit,
.button-delete {
    color: #fff;
    border: none;
    padding: 0.5rem 1.5rem;
    border-radius: 10px;
    line-height: 3rem;
    font-size: 1.125rem;
    font-weight: 500;
    -webkit-transition: background-color 0.3s ease-out;
    -moz-transition: background-color 0.3s ease-out;
    -o-transition: background-color 0.3s ease-out;
    transition: background-color 0.3s ease-out;
    text-decoration: none;
    margin:0px 12px;
}

.button-edit {
    background-color: #244846;
}

.button-delete {
    background-color: #782026;
}

.button-edit:hover {
    background-color: #4f807e;
}

.button-delete:hover {
    background-color: #94454a;
}

.modal {
    border-radius: 10px;
}

.modal
.modal-footer {
    text-align: center;
}

.modal-footer {
    margin-top: -25px;
}

.modal-option {
    font-size: 1.125rem;
    font-weight: 600;
}

.modal-option:hover {
    color: #4f807e;
}

/* Add recipe page */

.add-recipe-label {
    font-size: 1.125rem;
    font-weight: 500;
    color: #000;
}

.stock-images {
    text-decoration: none;
    color: #4f807e;
    font-weight: 600;
    padding: 5px;
    border: 1px solid #4f807e;
    margin: 5px 10px 5px 0px;
    display: inline-block;
}

.stock-images:hover {
    background-color: #4f807e;
    color: #fff;
}

.add-recipe-icon {
    font-size: 1.5rem;
    padding-right: 5px;
}


/* Sign up page */

.input-space {
    background-color: #fff;
    border: 1px solid #999;
    border-radius: 10px;
    margin-top: 0rem;
    margin-bottom: 0rem;
    line-height: 3.5rem;
}

.input-title {
    font-size: 1.125rem;
    font-weight: 700;
    margin-top: 0px;
}

.input-title span {
    font-weight: 300;
    font-size: 1rem;
}

.green-button-full {
    padding: 0.5rem 1.5rem;
    border-radius: 10px;
    line-height: 3rem;
    font-size: 1.125rem;
    font-weight: 500;
    margin: 0px 12px;
    background-color: #244846;
    color: #fff;
    border: none;
    -webkit-transition: background-color 0.3s ease-out;
    -moz-transition: background-color 0.3s ease-out;
    -o-transition: background-color 0.3s ease-out;
    transition: background-color 0.3s ease-out;
    text-align: center;
}

.green-button-full:hover {
    background-color: #4f807e;
}

.grey-button-full {
    padding: 0.5rem 1.5rem;
    border-radius: 10px;
    line-height: 3rem;
    font-size: 1.125rem;
    font-weight: 500;
    margin: 0px 12px;
    background-color: #888;
    color: #fff;
    border: none;
    -webkit-transition: background-color 0.3s ease-out;
    -moz-transition: background-color 0.3s ease-out;
    -o-transition: background-color 0.3s ease-out;
    transition: background-color 0.3s ease-out;
    display: inline-block;
    text-align: center;
}

.grey-button-full:hover {
    background-color: #aaa;
}

.click-here {
    font-weight: 600;
    color: #4f807e;
}

.click-here:hover {
    font-weight: 600;
    color: #244846;
}

/* Categories page */

.category-field {
    margin: 2px 10px 0px;
    font-size: 1.125rem;
    line-height: 2.75rem;
    border-radius: 10px;
}

.red-button-full {
    padding: 0.5rem 1.5rem;
    border-radius: 10px;
    line-height: 3rem;
    font-size: 1.125rem;
    font-weight: 500;
    margin: 0px 12px;
    background-color: #782026;
    color: #fff;
    border: none;
    -webkit-transition: background-color 0.3s ease-out;
    -moz-transition: background-color 0.3s ease-out;
    -o-transition: background-color 0.3s ease-out;
    transition: background-color 0.3s ease-out;
    display: inline-block;
    text-align: center;
}

.red-button-full:hover {
    background-color: #94454a;
}

/* Add categories page */

.green-border-button {
    padding: 0.5rem 1.5rem;
    border-radius: 10px;
    line-height: 2.75rem;
    font-size: 1.125rem;
    font-weight: 500;
    margin: 0px 12px;
    background-color: #fff;
    color: #244846;
    border: 3px solid #244846;
    box-sizing: border-box;
    -webkit-transition: background-color 0.3s ease-out;
    -moz-transition: background-color 0.3s ease-out;
    -o-transition: background-color 0.3s ease-out;
    transition: background-color 0.3s ease-out;
    display: inline-block;
    text-align: center;
}

.green-border-button:hover {
    background-color: #244846;
    color: #fff;
}

.cat-button-mobile {
    display: none;
}


/* Override Materialize */

.parallax-container~.parallax-container {
    height: 450px;
}

.parallax-container~.parallax-container~.parallax-container {
    height: 725px;
}


/* Media queries */

@media screen and (max-width: 1430px) {
    .image-latest-three {
        display: none;
    }
}

@media screen and (max-width: 1200px) {
    nav {
    width: 100%;
    }
    nav {
        margin-top: 0px;
    }
}


@media screen and (max-width: 992px) {
    .logo {
        padding-left: 0px;
    }

    .ad-full-desktop {
        display: none;
    }

    .ad-full-mobile {
        display: block;
    }
}

@media screen and (max-width: 781px) {
    .image-latest-two {
        display: none;
    }
}

@media screen and (max-width: 460px) {
    h3 {
        border-bottom: none;
        font-size: 2.25rem;
        line-height: 2.75rem;
        text-align: center;
        margin-top: -50px;
    }

    h3 span {
        padding: 0px 10px;
    }

    .par-landing-ready {
        margin-top: -25px;
    }

    .cat-button-desktop {
        display: none;
    }

    .cat-button-mobile {
        display: inline-block;
    }
}

